Work on re-implementing the front-end, hooking up the DI container some more and implementing magic methods to attempt some backwards compatibility

--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
     },
     "autoload": {
         "psr-4": {
-            "MODX\\": "src/"
+            "MODX\\": "core/src/"
         },
         "classmap": ["core/xpdo/"]
     }
